Enhance documentation across classes
Finished documenting all interfaces and most classes in the `common` module